# simpleGraphics

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: basic.frag  basic.vert  config.h  glad.c  main.cpp
